# chess-rs

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  Trunk.toml  perft.sh
.cargo/: config
.github/workflows/: deploy.yml
chrs/: Cargo.toml  index.html
chrs-core/: Cargo.toml
chrs-core/src/: app.rs  cache.rs  lib.rs  main.rs
chrs-core/src/ai/: eval.rs  mod.rs  negamax.rs  transposition.rs
chrs-core/src/board/: mod.rs
chrs-core/src/data/: fen.rs  mod.rs  moves.rs  piece.rs
chrs-core/src/generator/: mod.rs  tables.rs
chrs-core/src/ui/: gui.rs  mod.rs
chrs-core/src/zobrist/: mod.rs
chrs-lib/: Cargo.toml
chrs-lib/src/: lib.rs  prng.rs
chrs-lib/src/ai/: eval.rs  mod.rs  negamax.rs
chrs-lib/src/data/: bitboard.rs  fen.rs  mod.rs  moves.rs  square.rs
chrs-lib/src/generator/: mod.rs  tables.rs
chrs-lib/src/zobrist/: mod.rs
chrs-perft/: Cargo.toml
chrs-perft/src/: main.rs
chrs-ui/: Cargo.toml
chrs-ui/src/: app.rs  main.rs
chrs-ui/src/board/: embed.rs  mod.rs
chrs-ui/src/ui/: gui.rs  mod.rs
chrs/src/: app.rs  main.rs
chrs/src/board/: mod.rs
chrs/src/ui/: gui.rs  mod.rs
run-wasm/: Cargo.toml
src/: app.rs  board.rs  cache.rs  main.rs  piece.rs
src/board/: events.rs  mod.rs  piece.rs
src/boarddata/: fen.rs  mod.rs
src/data/: bitboard.rs  fen.rs  mod.rs  moves.rs  piece.rs  square.rs
src/generator/: mod.rs  tables.rs
src/ui/: gui.rs  mod.rs
tests/: perft.rs
