[package]
name = "chrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.28.1"
log = "0.4.17"
pretty_env_logger = "0.4.0"
pixels = "0.11.0"
resvg = "0.29.0"
 phf = { version = "0.11", features = ["macros"] }
