[package]
name = "chrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
pretty_env_logger = "0.4.0"
lazy_static = "1.4.0"
winit = "0.27.5"
pixels = "0.11.0"
resvg = "0.29.0"
egui = "0.20.0"
egui-winit = "0.20.1"
egui-wgpu = "0.20.0"
fontdue = "0.7.2"
rand = "0.8.5"
