[package]
name = "chrs"
version = "0.1.0"
author = ["Parth Pant <parthpant4@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
pretty_env_logger = "0.4.0"
# TODO: Is lazy_static really needed?
lazy_static = "1.4.0"
winit = "0.27.5"
pixels = "0.11.0"
resvg = "0.29.0"
egui = "0.20.0"
egui-winit = "0.20.1"
egui-wgpu = "0.20.0"
fontdue = "0.7.2"
rand = "0.8.5"
strum = "0.24"
strum_macros = "0.24"

[profile.test]
opt-level = 3
slow-timeout = { period = "60s", terminate-after = 5, grace-period = "30s" }

[profile.dev]
opt-level = 3
