[package]
name = "chrs-core"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.17"
pretty_env_logger = "0.4.0"
# TODO: Is lazy_static really needed?
lazy_static = "1.4.0"
rand = "0.8.5"
strum = "0.24"
strum_macros = "0.24"
rand_chacha = "0.3.1"
instant = "0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
instant = { version = "0.1", features = ["wasm-bindgen"] }
